--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ hilt = "2.51"
 hilt-navigation = "1.2.0"
 material = "1.6.2"
 mockk = "1.13.10"
-coroutines = "1.3.9"
+coroutines = "1.7.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -51,6 +51,7 @@ okhttp-interceptor = { group = "com.squareup.okhttp3", name = "logging-intercept
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-navigation" }
+hilt-test = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
 androidx-material = { group = "androidx.compose.material", name = "material", version.ref = "material" }
 mockk-base = { group = "io.mockk", name = "mockk", version.ref = "mockk"}
 mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockk"}
