Comments and minor changes

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -9,5 +9,6 @@
             android:name="com.davrukin.fruitsandvegetables.TestMainActivity"
             android:exported="false">
         </activity>
+        <!-- Android Studio complains about the link missing but tests fail without this -->
     </application>
 </manifest>
